# ordered-dithering-cpp

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: clang-build.yml  gcc-build.yml
cmake/: clang-tidy.cmake  lto.helper.cmake  test.helper.cmake  tidy.helper.cmake  with.helper.cmake
cmake/toolchain/: clang.cmake  gcc.cmake
main/: CMakeLists.txt
main/src/: main.cc  monotonic_buffer_resource.cc  monotonic_buffer_resource.hh  timing.hh
